<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.manouti.itemfinder.AddPlaceActivity"
    tools:showIn="@layout/activity_add_place">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.manouti.itemfinder.util.ui.TypefacedTextView
            android:id="@+id/add_place_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            font:typeface="Roboto-Regular.ttf"
            android:text="@string/add_place_info_text_view"
            android:textSize="@dimen/info_text_size"/>

        <ImageButton
            android:id="@+id/button_pick_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_place_info_text_view"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBlueButton"
            android:text="@string/button_pick_place"
            android:onClick="pickPlace"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/pick_place_64dp"/>

        <com.manouti.itemfinder.util.ui.TypefacedTextView
            android:id="@+id/coordinates_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_pick_place"
            font:typeface="Roboto-Bold.ttf"
            android:layout_marginBottom="10dp"
            android:text="@string/place_coordinates_text_view" />

        <com.manouti.itemfinder.util.ui.TypefacedTextView
            android:id="@+id/latlng_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_pick_place"
            font:typeface="Roboto-Regular.ttf"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:layout_toRightOf="@id/coordinates_text_view"
            android:layout_toEndOf="@id/coordinates_text_view"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/place_name_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:layout_below="@id/coordinates_text_view"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText">

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/FirebaseUI.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="255"
                android:hint="@string/place_name_hint"/>
        </android.support.design.widget.TextInputLayout>


        <ScrollView
            android:id="@+id/address_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_name_layout"
            android:paddingBottom="30dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/place_address_layout"
                style="@style/FirebaseUI.Text.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
                app:hintTextAppearance="@style/FirebaseUI.Text.HintText">

                <EditText
                    android:id="@+id/address_edit_text"
                    style="@style/FirebaseUI.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:hint="@string/place_address_hint"
                    android:gravity="bottom"/>
            </android.support.design.widget.TextInputLayout>
        </ScrollView>

        <android.support.design.widget.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/place_types_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:layout_below="@id/address_scroll_view"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText">

            <AutoCompleteTextView
                android:id="@+id/types_auto_complete"
                style="@style/FirebaseUI.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_types_hint"/>
        </android.support.design.widget.TextInputLayout>

        <com.manouti.itemfinder.util.ui.TypefacedTextView
            android:id="@+id/phone_or_website_required_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_types_layout"
            font:typeface="Roboto-Regular.ttf"
            android:text=""/>

        <android.support.design.widget.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/place_phone_number_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:layout_below="@id/phone_or_website_required_text_view"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText">

            <EditText
                android:id="@+id/phone_number_edit_text"
                style="@style/FirebaseUI.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/place_phone_number_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/place_website_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:layout_below="@id/place_phone_number_layout"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText">

            <EditText
                android:id="@+id/website_edit_text"
                style="@style/FirebaseUI.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:hint="@string/place_website_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_place_button"
            android:layout_width="110dp"
            android:layout_height="45dp"
            style="@style/FirebaseUI.Button"
            android:layout_below="@id/place_website_layout"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:text="@string/add_place_button"
            android:textColor="@color/button_text"
            android:onClick="addPlace"/>
    </RelativeLayout>

</ScrollView>
