<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorLightGreyBackground"
    tools:context=".user.items.ReviewProposedItemActivity">

    <include layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGreyBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".user.items.ReviewProposedItemActivity">

        <com.manouti.itemfinder.util.ui.TypefacedTextView
            android:id="@+id/review_hint_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            font:typeface="Roboto-Regular.ttf"
            android:text="@string/review_hint_text_view"/>

        <!--LinearLayout
            android:id="@+id/review_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/review_hint_text_view"
            android:gravity="right"
            android:layout_marginBottom="@dimen/activity_vertical_margin"-->

            <Button
                android:id="@+id/button_approve"
                android:text="@string/button_approve_proposed_item"
                android:layout_width="100dp"
                android:layout_below="@id/review_hint_text_view"
                android:textColor="@color/button_text"
                style="@style/FirebaseUI.Button"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"
                android:enabled="false" />

            <Button
                android:id="@+id/button_reject"
                android:text="@string/button_reject_proposed_item"
                android:layout_width="100dp"
                android:layout_below="@id/review_hint_text_view"
                android:layout_toRightOf="@id/button_approve"
                android:layout_toEndOf="@id/button_approve"
                android:textColor="@color/button_text"
                style="@style/FirebaseUI.Button"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:enabled="false" />

            <ImageButton
                android:id="@+id/help_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/review_hint_text_view"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                style="@style/HelpButton"
                android:onClick="showHelp"
                tools:ignore="contentDescription" />

        <!--/LinearLayout-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_approve"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/item_description_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:id="@+id/item_id_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <com.manouti.itemfinder.util.ui.TypefacedTextView
                            android:id="@+id/item_summary_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:textSize="@dimen/summary_text_size"
                            font:typeface="Roboto-Bold.ttf" />

                        <com.manouti.itemfinder.util.ui.TypefacedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item_description_text_view"
                            android:textSize="@dimen/summary_text_size"
                            font:typeface="Roboto-Bold.ttf" />

                        <com.manouti.itemfinder.util.ui.TypefacedTextView
                            android:id="@+id/item_description_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            font:typeface="Roboto-Regular.ttf"
                            android:textSize="@dimen/summary_text_size"/>

                        <com.manouti.itemfinder.util.ui.TypefacedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item_place_text_view"
                            android:textSize="@dimen/summary_text_size"
                            font:typeface="Roboto-Bold.ttf" />

                        <com.manouti.itemfinder.util.ui.TypefacedTextView
                            android:id="@+id/place_name_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/summary_text_size"
                            android:layout_marginTop="5dp"
                            font:typeface="Roboto-Regular.ttf" />

                        <com.manouti.itemfinder.util.ui.TypefacedTextView
                            android:id="@+id/place_details_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            font:typeface="Roboto-Regular.ttf" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/new_item_details_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_description_card_view"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    app:cardElevation="3dp"
                    android:visibility="gone">

                    <ListView
                        android:id="@+id/new_item_details_listview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </ScrollView>

        <com.nhaarman.supertooltips.ToolTipRelativeLayout
            android:id="@+id/tooltip_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>